infrastructure/production/controllers/apache-apisix-bitnami/route-admin-apisix-dev.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: admin-apisix-dev
  namespace: apisix
spec:
  host: admin.apisix.dev
  to:
    kind: Service
    name: apisix-data-plane
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough      
  wildcardPolicy: None
