infrastructure/production/controllers/apache-apisix-bitnami/route-data-plane.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: apisix-data-plane
  namespace: apisix
spec:
  host: apisix-data-plane.apps.lab.okd.local
  to:
    kind: Service
    name: apisix-data-plane
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge      
  wildcardPolicy: None
