infrastructure/production/controllers/apache-apisix-bitnami/route-test-example-com.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: test-example-com
  namespace: apisix
spec:
  host: test.example.com
  to:
    kind: Service
    name: apisix-data-plane
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough      
  wildcardPolicy: None
